tests-integration/tests/roundtrip/native-errors/semantic-errors/keyword-as-identifiers-02/keyword-as-identifiers-02.eprime.disabled
find letting,b,c: int(1..3)